crates/bijux-dna-pipelines/tests/snapshots/bijux-dna-pipelines__contracts__fastq_to_bam_default_profile.snap
---
source: crates/bijux-dna-pipelines/tests/contracts/profiles/profiles.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "capabilities": {
    "input_artifacts": [
      "FastqReads",
      "Bam"
    ],
    "input_domains": [
      "Fastq",
      "Cross"
    ],
    "output_artifacts": [
      "Bam",
      "MetricsBundle"
    ],
    "output_domains": [
      "Bam"
    ],
    "produces_outputs": [
      "fastq",
      "bam",
      "bam.metrics"
    ],
    "report_sections": [
      "fastq",
      "bam",
      "cross.handoff"
    ],
    "required_artifacts": [
      "report.json",
      "run_manifest.json",
      "stage_summaries.json",
      "invariants_report.json"
    ],
    "required_inputs": [
      "fastq",
      "reference"
    ],
    "required_metrics": [
      "fastq.metrics",
      "bam.metrics"
    ],
    "required_metrics_bundles": [
      "FastqCore",
      "BamCore"
    ],
    "required_report_sections": [
      "Fastq",
      "Bam",
      "Handoff",
      "PipelineDefaults"
    ],
    "required_stages": [
      "fastq.preprocess",
      "core.prepare_reference",
      "bam.align",
      "bam.qc_pre",
      "bam.coverage",
      "bam.damage"
    ],
    "supports_benchmarks": false
  },
  "defaults": {
    "params": {
      "bam.align": {
        "aligner": "bwa",
        "build_indices": false,
        "emit_stats": true,
        "preset": "default",
        "read_group": {
          "id": "sample.rg1",
          "library": "lib1",
          "platform": "ILLUMINA",
          "sample": "sample"
        },
        "reference": "reference.fasta",
        "reference_digest": "unknown",
        "rg_policy": "regenerate",
        "threads": 1
      },
      "bam.authenticity": {
        "mode": "aggregate"
      },
      "bam.contamination": {
        "assumptions": null,
        "prior": null,
        "reference_panels": [],
        "scope": "both",
        "sex_specific": false
      },
      "bam.coverage": {
        "depth_thresholds": [
          1,
          3,
          5
        ],
        "regions": null
      },
      "bam.damage": {
        "pmd_threshold_3p": 0.3,
        "pmd_threshold_5p": 0.3,
        "trim_3p": 2,
        "trim_5p": 2,
        "udg_model": "non_udg"
      },
      "bam.duplication_metrics": {
        "duplicate_action": "mark",
        "optical_duplicates": "mark_only",
        "umi_policy": "ignore"
      },
      "bam.endogenous_content": {
        "depth_thresholds": [
          1
        ],
        "regions": null
      },
      "bam.filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 30,
        "min_length": 30,
        "remove_duplicates": false
      },
      "bam.length_filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 0,
        "min_length": 30,
        "remove_duplicates": false
      },
      "bam.mapping_summary": {
        "regions": null
      },
      "bam.mapq_filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 30,
        "min_length": 0,
        "remove_duplicates": false
      },
      "bam.qc_pre": {
        "regions": null
      },
      "bam.sex": {
        "expected_sex": null,
        "method": "rxy"
      },
      "bam.validate": {
        "strict": true
      },
      "core.prepare_reference": {},
      "fastq.correct_errors": {
        "kmer_size": null,
        "paired_mode": "paired_end",
        "schema_version": "bijux.fastq.params.correct.v1",
        "threads": 1
      },
      "fastq.detect_adapters": {
        "paired_mode": "paired_end",
        "sample_reads": 2000000,
        "threads": 1
      },
      "fastq.filter_reads": {
        "contaminant_db": null,
        "damage_mode": "ancient",
        "entropy_threshold": null,
        "low_complexity_threshold": null,
        "max_n": null,
        "max_n_count": null,
        "max_n_fraction": 0.02,
        "n_policy": null,
        "paired_mode": "paired_end",
        "polyx_policy": "trim",
        "threads": 1
      },
      "fastq.merge_pairs": {
        "merge_overlap": 11,
        "min_len": 20,
        "paired_mode": "paired_end",
        "threads": 1
      },
      "fastq.preprocess": {
        "enable_contaminant_removal": false,
        "library_damage_treatment": "no_udg",
        "library_declared_paired": true,
        "paired_mode": "paired_end",
        "pipeline_mode": "shotgun",
        "stages": [
          "fastq.validate_reads",
          "fastq.detect_adapters",
          "fastq.trim_reads",
          "fastq.filter_reads",
          "fastq.profile_reads",
          "fastq.report_qc"
        ],
        "threads": 1
      },
      "fastq.report_qc": {
        "paired_mode": "paired_end",
        "threads": 1
      },
      "fastq.screen_taxonomy": {
        "contaminant_db": null,
        "paired_mode": "paired_end",
        "threads": 1
      },
      "fastq.profile_reads": {
        "paired_mode": "paired_end",
        "schema_version": "bijux.fastq.params.stats.v1",
        "threads": 1
      },
      "fastq.trim_reads": {
        "adapter_policy": "ancient_strict",
        "contaminant_policy": null,
        "damage_mode": "ancient",
        "min_len": 25,
        "n_policy": null,
        "paired_mode": "paired_end",
        "polyx_policy": "trim",
        "q_cutoff": 20,
        "threads": 1
      },
      "fastq.extract_umis": {
        "paired_mode": "paired_end",
        "schema_version": "bijux.fastq.params.umi.v1",
        "threads": 1,
        "umi_pattern": null
      },
      "fastq.validate_reads": {
        "paired_mode": "paired_end",
        "q_cutoff": null,
        "threads": 1
      }
    },
    "rationales": {
      "bam.align": "modern default alignment preset",
      "bam.authenticity": "pipeline default",
      "bam.contamination": "pipeline default",
      "bam.coverage": "pipeline default",
      "bam.damage": "pipeline default",
      "bam.duplication_metrics": "pipeline default",
      "bam.endogenous_content": "pipeline default",
      "bam.filter": "pipeline default",
      "bam.length_filter": "pipeline default",
      "bam.mapping_summary": "pipeline default",
      "bam.mapq_filter": "pipeline default",
      "bam.qc_pre": "cross-domain compatibility bridge for BAM pre-QC defaults",
      "bam.sex": "pipeline default",
      "bam.validate": "pipeline default",
      "core.prepare_reference": "reference prep uses canonical defaults for cross-domain alignment",
      "fastq.correct_errors": "pipeline default",
      "fastq.detect_adapters": "aDNA preset: stricter adapter detection depth for short fragments",
      "fastq.filter_reads": "pipeline default",
      "fastq.merge_pairs": "aDNA preset: aggressive overlap merge/collapse for fragmented paired-end reads",
      "fastq.preprocess": "pipeline default",
      "fastq.report_qc": "pipeline default",
      "fastq.screen_taxonomy": "pipeline default",
      "fastq.profile_reads": "pipeline default",
      "fastq.trim_reads": "aDNA preset: short-read preserving trim with strict adapter handling",
      "fastq.extract_umis": "pipeline default",
      "fastq.validate_reads": "pipeline default"
    },
    "tools": {
      "bam.align": "bwa",
      "bam.authenticity": "authenticct",
      "bam.contamination": "authenticct",
      "bam.coverage": "mosdepth",
      "bam.damage": "pydamage",
      "bam.duplication_metrics": "samtools",
      "bam.endogenous_content": "samtools",
      "bam.filter": "samtools",
      "bam.length_filter": "samtools",
      "bam.mapping_summary": "samtools",
      "bam.mapq_filter": "samtools",
      "bam.qc_pre": "samtools",
      "bam.sex": "rxy",
      "bam.validate": "samtools",
      "core.prepare_reference": "samtools",
      "fastq.correct_errors": "rcorrector",
      "fastq.detect_adapters": "fastqc",
      "fastq.filter_reads": "seqkit",
      "fastq.merge_pairs": "leehom",
      "fastq.preprocess": "planner",
      "fastq.report_qc": "multiqc",
      "fastq.screen_taxonomy": "kraken2",
      "fastq.profile_reads": "seqkit_stats",
      "fastq.trim_reads": "adapterremoval",
      "fastq.extract_umis": "umi_tools",
      "fastq.validate_reads": "fastqvalidator"
    }
  },
  "defaults_ledger_ref": "defaults_ledger.json",
  "description": "FASTQ preprocess → align → BAM QC/damage (modern defaults)",
  "id": "fastq-to-bam__default__v1",
  "input_domains": [
    "Fastq",
    "Cross"
  ],
  "invariants_preset": null,
  "library_model": {
    "assay_kind": "shotgun",
    "layout": "paired_end",
    "platform_hint": "illumina",
    "udg_treatment": "unknown"
  },
  "output_domains": [
    "Bam"
  ],
  "stability": "Beta"
}
